Add default enum values for radio
This bumps required msrv to 1.62 since its a new feature

--- a/nrf-hal-common/Cargo.toml
+++ b/nrf-hal-common/Cargo.toml
@@ -18,6 +18,7 @@ categories = ["embedded", "hardware-support", "no-std"]
 keywords = ["arm", "cortex-m", "nrf52", "nrf", "hal"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+rust-version = "1.62"
 
 [dependencies]
 cortex-m = "0.7.3"
